# agentic_education_platform

./: README.md  pyproject.toml  requirements-devel.txt  requirements.txt
agents/: __init__.py
app/: __init__.py
config/: __init__.py
services/: __init__.py
tests/: __init__.py
